# resume-craft

./: .gitignore  README.md  pyproject.toml  resume_craft.py
resume_craft/: __init__.py  builder.py  cli.py  licensing.py
tests/: test_licensing.py
